# opentitan

./: .bazelignore  .bazeliskrc  .bazelrc  .bazelrc.common  .clang-format  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .mdbookignore  .style.yapf  .svlint.toml  .svls.toml  BLOCKFILE  BUILD  BUILD.bazel  Bender.local  Bender.yml  COMMITTERS  CONTRIBUTING.md  GEMINI.md  LICENSE  MODULE.bazel  Makefile  NOTICE  PLAN_opensource_cw310_bitstream.md  README.md  SECURITY.md  SUMMARY.md  WORKSPACE  WORKSPACE.bzlmod  _index.md  add_dmem.txt  add_stats.txt  aes.flist  aes_rtl.flist  aon_timer.flist  aon_timer_rtl.flist  apt-requirements.txt  (+98 more)
doc/: BUILD.bazel  _index.md  glossary.md  index.md  introduction.md  product.md  productarchitecture.md  project.md  rfc-move-sigverify-out-of-mask-rom.md  rust_for_c_devs.md  tops.md
doc/contributing/: README.md  bazel_notes.md  directory_structure.md  github_notes.md  system_list.md
doc/getting_started/: README.md  _index.md  build_docs.md  build_sw.md  coverage.md  getting_started_dv.md  getting_started_fpga.md  index.md  install_openocd.md  setup_dv.md  setup_formal.md  setup_fpga.md  setup_verilator.md  tools-setup.md  using_openocd.md  workflows.md
doc/project/: _index.md  checklist.md  committers.md  contributing.md  development_stages.md  hw_checklist.md.tpl  hw_dashboard.md  hw_stages.md  ip_checklist.md.tpl  rfc_process.md  sw_checklist.md.tpl  technical_committee.md
doc/project_governance/: README.md  code_of_conduct.md  committers.md  communications.md  corporate_cla.txt  development_stages.md  edit.md  governing_board.md  history.md  lowRISC.md  membership.md  news.md  opensource.md  priority_definitions.md  project_milestone_definitions.md  rfc_approved.md  rfc_process.md  technical_committee.md  trademark.md  useraccounts.md  wg_good_practice.md  working_group.md
doc/rfc/: 0000-rfc-repository.md
doc/rm/: _index.md  asm_coding_style.md  c_cpp_coding_style.md  checklist.md  comportability_specification.md  crossbar_tool.md  device_interface_functions.md  hjson_usage_style.md  index.md  ipgen_tool.md  markdown_usage_style.md  otbn_style_guide.md  python_coding_style.md  ref_manual_fpga.md  register_tool.md  topgen_tool.md  vendor_hw_tool.md  vendor_in_tool.md  verilog_coding_style.md
doc/sections/: contributor.md  governance.md  opentitan.md  security.md  software.md  specification.md  usecases.md
doc/security/: README.md  _index.md  logical_security_model.md
doc/sg/: _index.md  asm_coding_style.md  c_cpp_coding_style.md  guidance_for_volatile.md  markdown_usage_style.md  otbn_style_guide.md
doc/ug/: _index.md  bazel_notes.md  design.md  directory_structure.md  documentation.md  dv_methodology.md  fpga_boards.md  getting_started.md  getting_started_build_sw.md  getting_started_design.md  getting_started_dv.md  getting_started_formal.md  getting_started_fpga.md  getting_started_hw_design.md  getting_started_sw.md  getting_started_sw_testing.md  getting_started_verilator.md  github_notes.md  hw_design.md  hw_stages.md  index.md  install_instructions.md  install_openocd.md  otbn_sw.md  quickstart.md  rust_for_c.md  system_list.md  vendor_hw.md
doc/use_cases/: README.md  _index.md
hw/: BUILD  Makefile  README.md  _index.md  allfiles.bzl  check_tool_requirements.core  check_tool_requirements.py  index.md  main.md  meson.build  tool_requirements.py
hw/bitstream/: BUILD  README.md
hw/data/: common_project_cfg.hjson
hw/doc/: cores.md  ibex.md
hw/dt_bindings/: BUILD
hw/dv/: BUILD  README.md  _index.md
hw/formal/: .lec_sv2v.do.swp  README.md  formal.core  formal_conn.sh  fpv  fpv.tcl  fpv_all  fpv_vcf.tcl  lec_sv2v  lec_sv2v.do  rtl_diff  rtl_diff.do  rtl_diff_all
hw/include/: cluster_bus_defines.sv  pulp_interfaces.sv  pulp_soc_defines.sv
hw/ip/: BUILD  README.md  _index.md  meson.build
hw/ip_templates/: BUILD
hw/lint/: .gitignore  BUILD  Makefile  README.md  cdc_lint  cdc_lint.tcl  cdc_lint_all  common.core  common.vlt  comportable.core  comportable.vlt  comportable.waiver  gen_report.sh  lint  lint.tcl  lint_all  rdc_lint  rdc_lint.tcl  rdc_lint_all  sival_testplan_schema.hjson  sival_testplan_schema.json
hw/power/: Makefile  setup.tcl  top_earlgrey.upf
hw/syn/: Makefile  README.md
hw/tb/: alsaqr_synth_pkg.sv  jtag_intf.sv  opentitan_synth_wrap.sv  secure_subsystem_asynch_synth_wrap.sv  secure_subsystem_synth_pkg.sv  secure_subsystem_synth_wrap.sv  testbench.sv  testbench_asynch.sv  testbench_asynch_astral.sv  testbench_preload.sv  top_earlgrey.sv  uart.sv  vip_security_island_soc.sv
hw/top/: BUILD  README.md  alias_top.bzl  create_top.md  defs.bzl  extensions.bzl  generate_top_desc.py  top_desc.md
hw/top_darjeeling/: BUILD  README.md  chip_cfg.hjson  chip_darjeeling_asic.core  chip_darjeeling_cw310.core  chip_darjeeling_cw310_hyperdebug.core  chip_darjeeling_verilator.core  defs.bzl  jtag_id_pkg.core  physical_pads.core  scan_role_pkg.core  top_darjeeling.core  top_darjeeling_ibex_pmp_reset_pkg.core  top_darjeeling_jtag_id_pkg.core  top_darjeeling_lc_ctrl_state_pkg.core  top_darjeeling_pad_orient_pkg.core  top_darjeeling_padring.core  top_darjeeling_pkg.core  top_darjeeling_racl_pkg.core  top_darjeeling_scan_role_pkg.core  top_manifest.hjson  top_pkg.core
hw/top_earlgrey/: BUILD  README.md  _index.md  ast_pkg.core  chip_cfg.hjson  chip_earlgrey_asic.core  chip_earlgrey_cw310.core  chip_earlgrey_cw310_hyperdebug.core  chip_earlgrey_cw340.core  chip_earlgrey_nexysvideo.core  chip_earlgrey_verilator.cc  chip_earlgrey_verilator.core  clkgen_xil7series.core  defs.bzl  earlgrey_xilinx_prim_pkg.core  ibex_pmp_reset_pkg.core  jtag_id_pkg.core  meson.build  pad_orient_pkg.core  padring.core  physical_pads.core  scan_role_pkg.core  top_earlgrey.core  top_earlgrey_alert_handler_virtual_provider.core  top_earlgrey_artys7-50.core  top_earlgrey_asic.core  top_earlgrey_clkmgr_virtual_provider.core  top_earlgrey_cw305.core  top_earlgrey_lc_ctrl_state_pkg.core  (+16 more)
quality/: BUILD.bazel
sw/: .gitignore  .rustfmt.toml  BUILD  Makefile  README.md  _index.md  meson.build  opts.mk  rules.mk
(+21153 files in other folders)
