# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

package(default_visibility = ["//visibility:public"])

exports_files([
    "MODULE.bazel",
    "python-requirements.txt",
    "SUMMARY.md",
    "book.toml",
])

filegroup(
    name = "doc_files",
    srcs = [
        "README.md",
        "//doc:doc_files",
        "//hw:doc_files",
        "//rules/opentitan:doc_files",
        "//signing:doc_files",
        "//site/book-theme:doc_files",
        "//sw:doc_files",
        "//third_party:doc_files",
        "//toolchain:doc_files",
        "//util:doc_files",
    ],
)

alias(
    name = "gen_rust_project",
    actual = "@rules_rust//tools/rust_analyzer:gen_rust_project",
)

alias(
    name = "format",
    actual = "//quality:format",
)
